@@ -27,9 +27,7 @@ Minimum <b id="stat_min_fee"></b> SPB
 <div id="stat_error" class="err" style="display:none">Something went wrong (<span id="error_info"></span>)</div>
 <div id="block_fees" style="height:370px;margin:5px"></div>
 <br>
-<table width="100%" style="margin-bottom:10px"><tr>
-<td><i>Note: If there was a reorg, this chart may be incorrect</i>
-<td align="right">
+<div width="100%" style="margin-bottom:10px;text-align:right">
 <input type="checkbox" id="block_fees_range" onchange="stat_clicked(last_hash, last_height)" checked>
 <span onclick="block_fees_range.click()" style="cursor:pointer">Limit range</span>
 &nbsp;&bull;&nbsp;
@@ -42,7 +40,7 @@ Minimum <b id="stat_min_fee"></b> SPB
 &nbsp;&bull;&nbsp;
 <span onclick="block_fees_spb.click()" style="cursor:pointer"><input type="radio" name="block_fees_mode" id="block_fees_spb" value="spb" onchange="stat_clicked(last_hash, last_height)">
 Sort by SPB</span>
-</table>
+</div>
 
 </div>
 </div><div id="fade" class="black_overlay"></div>
